--- a/index.html
+++ b/index.html
@@ -3,39 +3,19 @@
 <head>
     <link rel="stylesheet" href="JavaScript/script.js" type="text/Javascript">
   <meta charset="utf-8">
-  <title>Function library example</title>
-  <style>
-    
-    
-  </style>
+  <script src="JavaScript/DOM.js" defer></script>
+  <title>The Odin Project JS</title>
 </head>
-<script>
 
-/*let add7 = num => num +7
-add7(6)
-
-let multiply = function(a, b) {
- return a * b;
-};
-console.log(multiply(5, 6));
-
-
-
-
-function capitalize(string) 
-return string.toUpperCase */
-
-
-
-
-function lastLetter(string) {
-
-return string.charAt(string.length - 1)
-}
-
-lastLetter ("Hey Jude")
-
-</script>
+<body>
+  <h1>
+    THE TITLE OF YOUR WEBPAGE
+  </h1>
+  <div id="container">
+  	<div class="content">
+      This is the glorious text-content!
+    </div>
+  </div>
 </body>
 
 </html>
