players score variables created

--- a/index.html
+++ b/index.html
@@ -1,21 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="JavaScript/script.js" type="text/Javascript">
-  <meta charset="utf-8">
-  <script src="JavaScript/DOM.js" defer></script>
-  <title>The Odin Project JS</title>
+  <meta charset="UTF-8">
+  <title>Page Title</title>
 </head>
-
 <body>
-  <h1>
-    THE TITLE OF YOUR WEBPAGE
-  </h1>
-  <div id="container">
-  	<div class="content">
-      This is the glorious text-content!
-    </div>
-  </div>
+  <script>
+    // Your JavaScript goes here!
+    console.log("Hello, World!")
+  </script>
 </body>
-
 </html>
