--- a/RPS/index.html
+++ b/RPS/index.html
@@ -7,6 +7,9 @@
     <script src="script.js"></script>
 </head>
 <body>
+<button id = "rockBtn" >Rock</button>
+<button id = "paperBtn" >Paper</button>
+<button id = "scissorsBtn" >Scissors</button>
 
 </body>
 </html>
