--- a/RPS/index.html
+++ b/RPS/index.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
-<button id = "rockBtn" >Rock</button>
-<button id = "paperBtn" >Paper</button>
-<button id = "scissorsBtn" >Scissors</button>
-
+    <div>
+        <button id="rockBtn">Rock</button>
+        <button id="paperBtn">Paper</button>
+        <button id="scissorsBtn">Scissors</button>
+    </div>
+    
+    <div id="result"></div>
+    <div id="humanScore">Your Score: 0</div>
+    <div id="computerScore">Computer Score: 0</div>
+    
 </body>
 </html>
