player images uploaded

--- a/RPS/index.html
+++ b/RPS/index.html
@@ -3,15 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock Paper Scissors</title>
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
+    <title>Rock Paper Scissors</title>
+   
 </head>
 <body>
+    <div class="heading"> Get ready to ROCK with PAPER and cut up with SCISSORS!</div>
     <div>
-        <button id="rockBtn">Rock</button>
-        <button id="paperBtn">Paper</button>
-        <button id="scissorsBtn">Scissors</button>
+        <button id="rockBtn"><img src="Rock.png">Rock</button>
+        <button id="paperBtn"><img src="Paper.png">Paper</button>
+        <button id="scissorsBtn"><img src="Scissors.png">Scissors</button>
     </div>
     
     <div id="result"></div>
