font details added

--- a/RPS/index.html
+++ b/RPS/index.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Belanosima:wght@400;600;700&family=Permanent+Marker&display=swap" rel="stylesheet">
     <script src="script.js" defer></script>
     <title>Rock Paper Scissors</title>
    
 </head>
 <body>
-    <div class="heading"> Get ready to ROCK with PAPER and cut up with SCISSORS!</div>
-    <div>
+    <div class="heading"> It's time to ROCK with PAPER and cut up with SCISSORS!</div>
+    <div class="playerOptions">
         <button id="rockBtn"><img src="Rock.png">Rock</button>
         <button id="paperBtn"><img src="Paper.png">Paper</button>
         <button id="scissorsBtn"><img src="Scissors.png">Scissors</button>
