--- a/RPS/index.html
+++ b/RPS/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div>
-        <div class="heading"> It's time to ROCK with PAPER and cut up with SCISSORS!</div>
+        <div class="heading">ROCK with PAPER and cut up with SCISSORS!</div>
     </div>
     <div class= "score">
         <div class = "result" style = "background-color: #ffcab1" id="humanScore">Your Score: 0</div>
