--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="RPS/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Belanosima:wght@400;600;700&family=Permanent+Marker&display=swap" rel="stylesheet">
-    <script src="script.js" defer></script>
+    <script src="RPS/script.js" defer></script>
     <title>Rock Paper Scissors</title>
 </head>
 <body>
@@ -20,9 +20,9 @@
         <div class = "result" style = "background-color: #69a2b0" id="computerScore">Computer Score: 0</div>
     </div>
     <div class="playerOptions">
-        <button id="rockBtn"><img src="Rock.png">Rock</button>
-        <button id="paperBtn"><img src="Paper.png">Paper</button>
-        <button id="scissorsBtn"><img src="Scissors.png">Scissors</button>
+        <button id="rockBtn"><img src="RPS/Rock.png">Rock</button>
+        <button id="paperBtn"><img src="RPS/Paper.png">Paper</button>
+        <button id="scissorsBtn"><img src="RPS/Scissors.png">Scissors</button>
     </div>
         <div class="gameResults">
     
